Fix link color.

--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ header small {
 }
 
 .workshops ul li a {
-    background-color: blue;
+    background-color: #3379b3;
     border-radius: 5px;
     display: block;
     padding: 10px;
