--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                 <li>
                     <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
-                    <p>{{ gettext('Sample story (fork or copy to create your own story).') }}'</p>
+                    <p>{{ gettext('Sample story (fork or copy to create your own story).') }}</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/py101">Python 101</a>
