Add Contribute section, pictures, et al

--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+h2 {
+  text-align: center;
+}
+
 header {
     background-color: #eee;
     padding: 30px;
