--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@ $ git push origin</pre>
          <p><em>“{{ gettext('Education is for improving the lives of others and for leaving your community and world better than you found it') }}”</em></p>
          <p>― <a href="https://wikipedia.org/wiki/Marian_Wright_Edelman">Marian Wright Edelman</a></p>
 
-         <p>{{ gettext('PySchool is a fully community driven effort and is 100% open source. This means that anyone can use the PySchool materials and/or host an event. There\'s a lot of flexibility in the specifics of running a NodeSchool event. The only expectations for event hosts is that events be not-for-profit (free or low cost) and that governance of events should have an open membership model.') }}</p>
+         <p>{{ gettext('PySchool is a fully community driven effort and is 100% open source. This means that anyone can use the PySchool materials and/or host an event. There\'s a lot of flexibility in the specifics of running a PySchool event. The only expectations for event hosts is that events be not-for-profit (free or low cost) and that governance of events should have an open membership model.') }}</p>
 
          <p>{{ gettext('To ask and answer questions about authoring Pyschool content, check out our %(pyschool_link)s discussion group. Don\'t hesitate to send us an %(email_link)s if you can\'t find the answer you\'re looking for.') |
             format(
