--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,6 @@
         <meta name="description" content="PySchool">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -54,7 +52,9 @@
        </section>
 
        <section class="try">
-         <h2>Try a story</h2>
+         <h2>Try it</h2>
+
+         <div class="try-logo"></div>
 
          <p>Ready to try one story. Here is how to get started!</p>
 
