Add title and meta to the index page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block meta %}
+<title>PySchool</title>
+<meta name="description" content="PySchool, stories to learn Python stuff.">
 {% endblock meta %}
 
 {% block class %}page-home{% endblock class %}
